RESOLVED FIXED230172
Fix computed style for transform-origin on SVG boxes
https://bugs.webkit.org/show_bug.cgi?id=230172
Summary Fix computed style for transform-origin on SVG boxes
Simon Fraser (smfr)
Reported 2021-09-10 14:52:59 PDT
Fix computed style for transform-origin on SVG boxes
Attachments
Patch (13.59 KB, patch)
2021-09-10 14:54 PDT, Simon Fraser (smfr)
zalan: review+
Simon Fraser (smfr)
Comment 1 2021-09-10 14:54:43 PDT
alan
Comment 2 2021-09-10 15:00:05 PDT
Comment on attachment 437910 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=437910&action=review > Source/WebCore/css/CSSComputedStyleDeclaration.cpp:562 > +static FloatRect transformReferenceBox(const RenderStyle& style, RenderElement& renderer) const RenderElement&? > Source/WebCore/rendering/svg/SVGRenderSupport.cpp:338 > +FloatRect SVGRenderSupport::transformReferenceBox(RenderElement& renderer, const SVGElement& element, const RenderStyle& style) const?
Simon Fraser (smfr)
Comment 3 2021-09-14 09:50:42 PDT
Radar WebKit Bug Importer
Comment 4 2021-09-14 09:51:22 PDT
Note You need to log in before you can comment on or make changes to this bug.