Fix computed style for transform-origin on SVG boxes https://bugs.webkit.org/show_bug.cgi?id=230172

Reviewed by Alan Bujtas.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-transforms/transform-origin-014-expected.txt:

Source/WebCore:

When getting the computed value for transform-origin on SVG boxes, we need to get
the appropriate "reference box" from the renderer. Do minor refactoring to share
code between rendering and computed style for SVG and non-SVG boxes.

Tested by imported/w3c/web-platform-tests/css/css-transforms/transform-origin-014.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::transformReferenceBox):
(WebCore::ComputedStyleExtractor::valueForPropertyInStyle):
* rendering/RenderLayer.cpp:
(WebCore::transformBoxToCSSBoxType): Deleted.
* rendering/style/RenderStyleConstants.cpp:
(WebCore::transformBoxToCSSBoxType):
* rendering/style/RenderStyleConstants.h:
* rendering/svg/SVGRenderSupport.cpp:
(WebCore::SVGRenderSupport::transformReferenceBox):
* rendering/svg/SVGRenderSupport.h:
* svg/SVGGraphicsElement.cpp:
(WebCore::SVGGraphicsElement::animatedLocalTransform const):

Canonical link: https://commits.webkit.org/241641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282379 268f45cc-cd09-0410-ab3c-d52691b4dbfc